[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Assets/Icons/White/Audio/MusicNotes/icons8-musik-1000.png" type="Texture" id=1]
[ext_resource path="res://src/Assets/Icons/White/General/add_1_72px.png" type="Texture" id=2]
[ext_resource path="res://src/Assets/Icons/White/Folder/add folder_72px.png" type="Texture" id=3]
[ext_resource path="res://src/Scenes/SubOptions/Tagging/TagScrollContainer.gd" type="Script" id=4]
[ext_resource path="res://src/Scenes/SubOptions/Tagging/ChangeTags.gd" type="Script" id=5]
[ext_resource path="res://src/Scenes/SubOptions/Tagging/GenreSelection.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=2]

[node name="ChangeTags" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 1107.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1105.0
margin_bottom = 1108.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="TopEmpty" type="Control" parent="ScrollContainer/VBoxContainer"]
margin_right = 1105.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 1105.0
margin_bottom = 323.0
rect_min_size = Vector2( 0, 200 )
mouse_filter = 2
scroll_vertical_enabled = false

[node name="Covers" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/ScrollContainer"]
margin_right = 1105.0
margin_bottom = 300.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Cover1" type="TextureRect" parent="ScrollContainer/VBoxContainer/ScrollContainer/Covers"]
margin_right = 1105.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Buffer2" type="Control" parent="ScrollContainer/VBoxContainer"]
margin_top = 331.0
margin_right = 1105.0
margin_bottom = 346.0
rect_min_size = Vector2( 0, 15 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="MainTags" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 354.0
margin_right = 1105.0
margin_bottom = 1050.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftEmpty" type="Control" parent="ScrollContainer/VBoxContainer/MainTags"]
margin_right = 50.0
margin_bottom = 696.0
rect_min_size = Vector2( 50, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags"]
margin_left = 58.0
margin_right = 1047.0
margin_bottom = 696.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="Paths" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer"]
margin_right = 989.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Paths"]
margin_right = 130.0
margin_bottom = 38.0
rect_min_size = Vector2( 100, 0 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Paths/VBoxContainer"]
margin_right = 130.0
margin_bottom = 30.0
rect_min_size = Vector2( 130, 30 )
size_flags_horizontal = 3
text = "Path[s]:"
align = 1
valign = 1

[node name="Control" type="Control" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Paths/VBoxContainer"]
margin_top = 38.0
margin_right = 130.0
margin_bottom = 38.0
size_flags_vertical = 3

[node name="Values" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Paths"]
margin_left = 138.0
margin_right = 941.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Paths/Values"]
margin_right = 803.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddPath" type="TextureButton" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Paths/Values/HBoxContainer"]
margin_top = 5.0
margin_right = 27.0
margin_bottom = 32.0
rect_min_size = Vector2( 27, 27 )
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Paths/Values/HBoxContainer"]
margin_left = 35.0
margin_top = 5.0
margin_right = 803.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3
size_flags_vertical = 4
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSong" type="TextureButton" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Paths"]
margin_left = 949.0
margin_top = 5.0
margin_right = 989.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 27 )
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
action_mode = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="NameExplorer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer"]
margin_top = 53.0
margin_right = 989.0
margin_bottom = 80.0

[node name="NameExplorerLabel" type="Label" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/NameExplorer"]
margin_right = 130.0
margin_bottom = 27.0
rect_min_size = Vector2( 130, 27 )
text = "Filename:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="SongExplorer" type="LineEdit" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/NameExplorer"]
margin_left = 138.0
margin_right = 989.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_lock_": true
}

[node name="NameTag" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer"]
margin_top = 95.0
margin_right = 989.0
margin_bottom = 122.0

[node name="NameTagLabel" type="Label" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/NameTag"]
margin_right = 130.0
margin_bottom = 27.0
rect_min_size = Vector2( 130, 27 )
text = "Title:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="NameTag" type="LineEdit" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/NameTag"]
margin_left = 138.0
margin_right = 989.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_lock_": true
}

[node name="Artist" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer"]
margin_top = 137.0
margin_right = 989.0
margin_bottom = 164.0

[node name="ArtistLabel" type="Label" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Artist"]
margin_right = 130.0
margin_bottom = 27.0
rect_min_size = Vector2( 130, 27 )
size_flags_vertical = 0
text = "Artist[s]:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Artist"]
margin_left = 138.0
margin_right = 989.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Artist/VBoxContainer"]
margin_right = 851.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="AddArtist" type="TextureButton" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Artist/VBoxContainer/HBoxContainer"]
margin_right = 27.0
margin_bottom = 27.0
rect_min_size = Vector2( 27, 27 )
size_flags_vertical = 0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Artist" type="LineEdit" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Artist/VBoxContainer/HBoxContainer"]
margin_left = 35.0
margin_right = 851.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Album" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer"]
margin_top = 179.0
margin_right = 989.0
margin_bottom = 206.0

[node name="AlbumLabel" type="Label" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Album"]
margin_right = 130.0
margin_bottom = 27.0
rect_min_size = Vector2( 130, 27 )
text = "Album:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Album" type="LineEdit" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Album"]
margin_left = 138.0
margin_right = 989.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GenreSelection" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 221.0
margin_right = 989.0
margin_bottom = 248.0

[node name="TrackNumber" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer"]
margin_top = 263.0
margin_right = 989.0
margin_bottom = 290.0

[node name="TrackNumberLabel" type="Label" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/TrackNumber"]
margin_right = 130.0
margin_bottom = 27.0
rect_min_size = Vector2( 130, 27 )
text = "Track Number:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TrackNumber" type="LineEdit" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/TrackNumber"]
margin_left = 138.0
margin_right = 989.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ReleaseYear" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer"]
margin_top = 305.0
margin_right = 989.0
margin_bottom = 332.0

[node name="ReleaseYearLabel" type="Label" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/ReleaseYear"]
margin_right = 130.0
margin_bottom = 27.0
rect_min_size = Vector2( 130, 27 )
text = "Release Year:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ReleaseYear" type="LineEdit" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/ReleaseYear"]
margin_left = 138.0
margin_right = 989.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Cover" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer"]
margin_top = 347.0
margin_right = 989.0
margin_bottom = 374.0

[node name="Cover" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Cover"]
margin_right = 989.0
margin_bottom = 27.0

[node name="CoverLabel" type="Label" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Cover/Cover"]
margin_right = 130.0
margin_bottom = 27.0
rect_min_size = Vector2( 130, 27 )
text = "Cover:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Cover/Cover"]
margin_left = 138.0
margin_right = 941.0
margin_bottom = 27.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="SelectCover" type="TextureButton" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Cover/Cover"]
margin_left = 949.0
margin_right = 989.0
margin_bottom = 27.0
rect_min_size = Vector2( 40, 27 )
action_mode = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Cover"]
visible = false
margin_top = 31.0
margin_right = 709.0
margin_bottom = 131.0

[node name="CoverDescriptionLabel" type="Label" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Cover/HBoxContainer"]
margin_top = 31.0
margin_right = 130.0
margin_bottom = 68.0
rect_min_size = Vector2( 130, 27 )
text = "Cover 
Description:"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="CoverDescription" type="TextEdit" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Cover/HBoxContainer"]
margin_left = 134.0
margin_right = 709.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Comment" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer"]
margin_top = 389.0
margin_right = 989.0
margin_bottom = 589.0

[node name="CommentLabel" type="Label" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Comment"]
margin_right = 130.0
margin_bottom = 27.0
rect_min_size = Vector2( 130, 27 )
size_flags_vertical = 0
text = "Comment[s]"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Comment" type="TextEdit" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Comment"]
margin_left = 138.0
margin_right = 989.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_styles/completion = SubResource( 2 )

[node name="Popularity" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer"]
margin_top = 604.0
margin_right = 989.0
margin_bottom = 631.0

[node name="Rating" type="Label" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Popularity"]
margin_right = 130.0
margin_bottom = 27.0
rect_min_size = Vector2( 130, 27 )
size_flags_vertical = 0
text = "Rating / 10"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="RatingEdit" type="SpinBox" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Popularity"]
margin_left = 138.0
margin_right = 989.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 1.0
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer"]
margin_top = 646.0
margin_right = 989.0
margin_bottom = 696.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
alignment = 2

[node name="SetTag" type="Button" parent="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/HBoxContainer"]
margin_left = 839.0
margin_top = 5.0
margin_right = 989.0
margin_bottom = 45.0
rect_min_size = Vector2( 150, 40 )
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Set Tag"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightEmpty" type="Control" parent="ScrollContainer/VBoxContainer/MainTags"]
margin_left = 1055.0
margin_right = 1105.0
margin_bottom = 696.0
rect_min_size = Vector2( 50, 0 )

[node name="BottomEmpty" type="Control" parent="ScrollContainer/VBoxContainer"]
margin_top = 1058.0
margin_right = 1105.0
margin_bottom = 1108.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="RightBuffer" type="Control" parent="."]
margin_left = 1115.0
margin_right = 1120.0
margin_bottom = 600.0
rect_min_size = Vector2( 5, 0 )

[connection signal="pressed" from="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Paths/Values/HBoxContainer/AddPath" to="." method="_on_AddPath_pressed"]
[connection signal="text_entered" from="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Paths/Values/HBoxContainer/LineEdit" to="." method="OnSongPathManuallyEntered"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Paths/SelectSong" to="." method="_on_SelectSong_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Artist/VBoxContainer/HBoxContainer/AddArtist" to="." method="_on_AddArtist_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/Cover/Cover/SelectCover" to="." method="_on_SelectCover_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/MainTags/VBoxContainer/HBoxContainer/SetTag" to="." method="_on_SetTag_pressed"]
